Swapped boxed primitive constructors with X.valueOf