@@ -151,7 +151,7 @@ public class Bradley_ChchSpecific_2014_AttenRel extends AttenuationRelationship 
 	protected static final double chm = 3;
 	protected static final double cg3 = 4;
 
-	protected final static Double PERIOD_DEFAULT = new Double(1.0);
+	protected final static Double PERIOD_DEFAULT = Double.valueOf(1.0);
 	private HashMap indexFromPerHashMap;
 
 	private int iper;
@@ -200,7 +200,7 @@ public class Bradley_ChchSpecific_2014_AttenRel extends AttenuationRelationship 
 		initSupportedIntensityMeasureParams();
 		indexFromPerHashMap = new HashMap();
 		for (int i = 0; i < period.length-2; i++) {  // subtract two for PGA/PGV (last two indicies)
-			indexFromPerHashMap.put(new Double(period[i]), new Integer(i));
+			indexFromPerHashMap.put(Double.valueOf(period[i]), Integer.valueOf(i));
 		}
 
 		initEqkRuptureParams();
@@ -535,7 +535,7 @@ public class Bradley_ChchSpecific_2014_AttenRel extends AttenuationRelationship 
 		// Create saParam:
 		DoubleDiscreteConstraint periodConstraint = new DoubleDiscreteConstraint();
 		for (int i = 0; i < period.length-2; i++) {  // subtract two for PGA/PGV (last indicies)
-			periodConstraint.addDouble(new Double(period[i]));
+			periodConstraint.addDouble(Double.valueOf(period[i]));
 		}
 		periodConstraint.setNonEditable();
 		saPeriodParam = new PeriodParam(periodConstraint);
