@@ -2733,7 +2733,7 @@ public class GCIM_HazardCurveApp  extends HazardCurveApplication {
 
 		int size = func.size();
 		for (int i = 0; i < size; ++i)
-			imlList.add(new Double(func.getX(i)));
+			imlList.add(Double.valueOf(func.getX(i)));
 
 		return imlList;
 	}
