@@ -16,9 +16,9 @@ public class ETAS_ProductivityParam_k extends DoubleParameter {
 	public final static String NAME = "k - ETAS Productivity";
 	public final static String INFO = "The ETAS productivity parameter";
 	private static final String UNITS = "(days)^(p-1)";
-	public final static Double MIN = new Double(3.79E-4*Math.pow(365.25,0.07));
-	public final static Double MAX = new Double(4.97E-3*Math.pow(365.25,0.07)*2);	// multiplied by two to allow Felzer value
-	public final static Double DEFAULT_VALUE = new Double(2.84E-03*Math.pow(365.25,0.07));
+	public final static Double MIN = Double.valueOf(3.79E-4*Math.pow(365.25,0.07));
+	public final static Double MAX = Double.valueOf(4.97E-3*Math.pow(365.25,0.07)*2);	// multiplied by two to allow Felzer value
+	public final static Double DEFAULT_VALUE = Double.valueOf(2.84E-03*Math.pow(365.25,0.07));
 
 	/**
 	 * This sets the default value as given.
